fixed photo alignment in index

--- a/index.css
+++ b/index.css
@@ -2,15 +2,3 @@ body {
     background-color: #659dbd;
     background-image: url(Assets/Images/45-degree-fabric-dark.png);
 }
-
-nav {
-    background-color: #8d8741;
-}
-
-.nav-link {
-    float: right;
-}
-
-.jumbotron {
-    padding-top: 100px;
-}
